# edgydb

./: .gitignore  CMakeLists.txt  Condition.hpp  Database.cpp  Database.hpp  Deserialization.hpp  Logger.hpp  README.md  Seeder.hpp  Serialization.hpp  Utils.hpp  condition.hpp  database.cpp  database.hpp  deserialization.hpp  graph.cpp  graph.hpp  main.cpp  serialization.hpp
